--- a/internal-dependencies/pom.xml
+++ b/internal-dependencies/pom.xml
@@ -140,7 +140,12 @@
       </dependency>
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
+        <artifactId>groovy</artifactId>
+        <version>${version.groovy}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy-jsr223</artifactId>
         <version>${version.groovy}</version>
       </dependency>
       <dependency>
