--- a/distro/jboss/webapp-standalone/pom.xml
+++ b/distro/jboss/webapp-standalone/pom.xml
@@ -101,7 +101,7 @@
     </dependency>
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
+      <artifactId>groovy-jsr223</artifactId>
     </dependency>
     <dependency>
       <groupId>org.graalvm.js</groupId>
