--- a/distro/run/assembly/pom.xml
+++ b/distro/run/assembly/pom.xml
@@ -91,8 +91,7 @@
 
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <version>${version.groovy}</version>
+      <artifactId>groovy-jsr223</artifactId>
     </dependency>
 
   </dependencies>
