--- a/engine-rest/pom.xml
+++ b/engine-rest/pom.xml
@@ -13,8 +13,26 @@
   <packaging>pom</packaging>
   <name>Camunda Platform - engine - REST - Root</name>
 
+  <properties>
+    <version.rest-assured>4.5.0</version.rest-assured>
+    <!-- override groovy version with the one used by rest-assured -->
+    <version.groovy>3.0.9</version.groovy>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>${version.rest-assured}</version>
+      </dependency>
+      <dependency>
+        <!-- explicitly declare groovy, so it prevents our groovy version
+            from overriding the groovy version from rest-assured -->
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy</artifactId>
+        <version>${version.groovy}</version>
+      </dependency>
       <dependency>
         <groupId>org.camunda.bpm</groupId>
         <artifactId>camunda-core-internal-dependencies</artifactId>
@@ -26,12 +44,6 @@
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
         <version>2.3.6</version>
-      </dependency>
-      <dependency>
-        <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
-        <version>4.5.0</version>
-        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
